# dialogs-py

./: README.md  pyproject.toml
pharosone_dialogs/: __init__.py  client.py  types.py
pharosone_dialogs/instrument/: __init__.py  _session.py  _transcript.py  _worker.py  _wrappers.py
pharosone_dialogs/integrations/: __init__.py  langchain.py  litellm.py
tests/: test_client.py  test_instrument_anthropic.py  test_instrument_openai.py  test_instrument_worker.py  test_integrations.py
